tests/parsing/smtlib/v2.6/errors/100_get-value_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/100_get-value_unclosed_1.smt2", line 1, character 17-18:
1 | (get-value (foo) _)
                     ^
Error while parsing a get-value command, read the reserved word '_',
      but expected a closing parenthesis.
